[gd_scene load_steps=3 format=3 uid="uid://bqku2krmd7fpx"]

[ext_resource type="Script" uid="uid://c4agai0e2ftxr" path="res://scenes/ui/menus/pause_menu.gd" id="1_duwyh"]
[ext_resource type="Theme" path="res://ui/title_theme.tres" id="2_locs7"]

[node name="PauseMenu" type="MarginContainer" node_paths=PackedStringArray("default_focus")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_duwyh")
default_focus = NodePath("VBoxContainer/VBoxContainer/ResumeButton")
can_go_back = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_locs7")
text = "PAUSED"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="MenuButton" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Main Menu"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
